--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
       <ul>
-        <li><a link="http://www.neorblog.in">Rahul's Progress</a></li>
+        <li><a href="http://www.neorblog.in">Rahul's Progress</a></li>
         <hr>
         <li>Rishabh's Progress</li>
         <hr>
