--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
   </head>
   <body>
       <ul>
-        <li><a href="http://www.neorblog.in">Rahul's Progress</a></li>
+        <li><a>Rahul's Progress</a></li>
         <hr>
         <li>Rishabh's Progress</li>
         <hr>
         <li>Ali's Progress</li>
         <hr>
-        <li>Shrey's Progress</li>
+        <li>Apoorva's Progress</li>
+        <hr>
+        <li>Shatakshi's Progress</li>
+        <hr>
+        <li>Sagar's Progress</li>
         <hr>
       </ul>
   </body>
