Added some new files and updated the project index with my folder's index file

--- a/Ali Akber Faiz/4.html
+++ b/Ali Akber Faiz/4.html
@@ -17,6 +17,22 @@
 	<video width="200px" height="200px" controls><source src="video.mp4" type="video/mp4">This is my video</video>
 	<br/>
 	<audio controls><source src="audio.mp3" type="audio/mp3" preload="none"></audio>
+	<article>
+		<h1>
+		Title
+		</h1>
+		<p>
+			<strong>Very Strong :D</strong><br>
+			<em>Emphasised</em><br>
+			<i>Italics</i><br>
+			<b>Bold</b><br>
+			<small>Small</small>
+			<mark>mark</mark>
+			<del>del</del>
+			<sub>sub</sub>
+			<sup>sup</sup>
+		</p>
+	</article>
 
 	</div>
 
