--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <hr/>
         <li>Rishabh's Progress</li>
         <hr/>
-        <li>Ali's Progress</li>
+        <li><a href="Ali Akber Faiz\index.html">Ali's Progress </a></li>
         <hr/>
         <li>Apoorva's Progress</li>
         <hr/>
