linked new files

--- a/Ali Akber Faiz/index.html
+++ b/Ali Akber Faiz/index.html
@@ -5,6 +5,7 @@
 	<meta name="Progress" content="Practice progress and various html pages made while watching the videos">
 </head>
 <body>
+<h1>Welcome to My progress page</h1>
 <div>
 	<p>
 		<h1>Videos watched and their html  pages pages uptill now are</h1>
