--- a/Sagar/index.html
+++ b/Sagar/index.html
@@ -1,7 +1,8 @@
 <html>
 <body>
 <ol>
-<li><a href="first.html">First Page</a></li>
+<li><a href="first.html">Demo/a></li>
+<li><a href="1.html">1 html page</li>
 </ol>
 </body>
 </html>
