--- a/Sagar/1.html
+++ b/Sagar/1.html
@@ -4,6 +4,7 @@
 	<title>First html </title>
 	<meta name="Description" content="something">
 	<!--for search engines-->
+</head>
 <body>
 HEy Bro...
 </body>
