--- a/Sagar/index.html
+++ b/Sagar/index.html
@@ -2,7 +2,8 @@
 <body>
 <ol>
 <li><a href="first.html">Demo/a></li>
-<li><a href="1.html">1 html page</li>
+<li><a href="1.html">1st html page</li>
+<li><a href="2.html">2nd html page</li> 
 </ol>
 </body>
 </html>
